--- a/partials/room.html
+++ b/partials/room.html
@@ -7,6 +7,7 @@
   <form name="loginForm" ng-show="!user.name" ng-submit="joinRoom()">
     <label>name</label>
     <input type="text" ng-model="username" ng-pattern="/^\s*\w*\s*$/" required="required" name="username"/><span ng-show="loginForm.username.$error.required" class="error">Required!</span><span ng-show="loginForm.username.$error.pattern" class="error">Single word only!</span>
+    <button ng-show="loginForm.$valid">Join!</button>
   </form>
   <local-video></local-video>
   <div ng-repeat="videoSrc in remoteVideos">
