--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,13 @@ body {
   color: #f00;
 }
 video.local {
-  width: 200px;
-  height: 200px;
-  float: right;
+  width: 15%;
+  top: 150px;
+  right: 30px;
+  position: fixed;
 }
 video {
-  align: center;
+  width: 35%;
+  margin: 15px;
+  float: left;
 }
