remove disconnected users

--- a/partials/local-video.html
+++ b/partials/local-video.html
@@ -1,2 +1,2 @@
 
-<video autoplay="autoplay" muted="muted" ng-src="{{localVideoSrc}}" class="local"></video>
+<video autoplay="autoplay" muted="muted" ng-src="{{videoSrc}}" class="local"></video>
