--- a/partials/room.html
+++ b/partials/room.html
@@ -9,8 +9,11 @@
     <input type="text" ng-model="username" ng-pattern="/^\s*\w*\s*$/" required="required" name="username"/><span ng-show="loginForm.username.$error.required" class="error">Required!</span><span ng-show="loginForm.username.$error.pattern" class="error">Single word only!</span>
     <button ng-show="loginForm.$valid">Join!</button>
   </form>
-  <local-video source="localVideoSrc"></local-video>
+  <local-video source="localVideoSrc" sharescreen="shareScreen()"></local-video>
   <div ng-repeat="(name, url) in remoteVideos">
+    <remote-video source="url"></remote-video>
+  </div>
+  <div ng-repeat="(name, url) in remoteScreens">
     <remote-video source="url"></remote-video>
   </div>
 </div>
