--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,54 @@ body {
 .error {
   color: #f00;
 }
-video.local {
-  width: 15%;
-  top: 150px;
-  right: 30px;
-  position: fixed;
-}
 video {
   width: 35%;
   margin: 15px;
   float: left;
+}
+local-video {
+  -webkit-perspective: 800;
+  perspective: 800;
+  position: fixed;
+  top: 100px;
+  right: 50px;
+}
+local-video:hover .flipper,
+local-video.hover .flipper {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.flipper {
+  transition: 1s;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  position: relative;
+}
+local-video,
+.front,
+.back {
+  width: 200px;
+  height: 150px;
+}
+.front,
+.back {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  transition: 1s;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  top: 0;
+  left: 0;
+  margin: 0;
+}
+.back {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  background: #808080;
+}
+.front {
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+  z-index: 2;
 }
