--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,83 @@
 @font-face {
-  font-family: HelveticaNeue;
+  font-family: HelveticaNeueUltraLight;
+  src: url("../fonts/HelveticaNeue-UltraLight.otf");
+}
+@font-face {
+  font-family: HelveticaNeueLight;
   src: url("../fonts/HelveticaNeue-Light.otf");
 }
 body {
-  font-family: HelveticaNeue;
+  font-family: HelveticaNeueUltraLight;
 }
-.error {
-  color: #f00;
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  font-size: 200%;
+}
+a:link {
+  color: #111;
+}
+a:visited {
+  color: #111;
+}
+a:hover {
+  color: #ff4136;
+}
+a:active {
+  color: #111;
+}
+label {
+  font-size: 200%;
+}
+form span {
+  font-size: 200%;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-size: 200%;
 }
 video {
   width: 35%;
   margin: 15px;
   float: left;
+}
+button {
+  font-family: HelveticaNeueUltraLight;
+  font-size: 200%;
+  background: none;
+  border: none;
+}
+form button {
+  border: 1px solid #ddd;
+}
+form button:hover {
+  box-shadow: inset 0 0 5px #000;
+}
+input[type=text] {
+  border: 1px solid #ddd;
+  font-family: HelveticaNeueUltraLight;
+  font-size: 200%;
+  margin: 10px;
+}
+input {
+  outline: none;
+}
+input.error {
+  box-shadow: 0 0 5px #ff4136;
+  color: #111;
+}
+.center {
+  text-align: center;
+}
+.error {
+  color: #ff4136;
+}
+.logo {
+  font-size: 500%;
 }
 local-video {
   -webkit-perspective: 800;
@@ -42,9 +108,6 @@ local-video,
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   position: absolute;
-  transition: 1s;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
   top: 0;
   left: 0;
   margin: 0;
@@ -52,10 +115,21 @@ local-video,
 .back {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
-  background: #808080;
+  background: #ddd;
 }
 .front {
   -webkit-transform: rotateY(0deg);
   transform: rotateY(0deg);
-  z-index: 2;
+}
+/*---------------------angular animations---------------------*/
+.ng-enter {
+  transition: 0.5s linear all;
+}
+.ng-enter,
+.ng-leave.ng-leave-active {
+  opacity: 0;
+}
+.ng-leave,
+.ng-enter.ng-enter-active {
+  opacity: 1;
 }
